labs/dual-hub-vnra-udr-transit/show-output/validation/s1-test1-effective-nsg.json
{
  "value": [
    {
      "association": {
        "subnet": {
          "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-dual-hub-vnra-udr-transit/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/vm-subnet",
          "resourceGroup": "rg-dual-hub-vnra-udr-transit"
        }
      },
      "effectiveSecurityRules": [
        {
          "access": "Allow",
          "destinationAddressPrefix": "VirtualNetwork",
          "destinationAddressPrefixes": [
            "VirtualNetwork"
          ],
          "destinationPortRange": "0-65535",
          "destinationPortRanges": [
            "0-65535"
          ],
          "direction": "Inbound",
          "name": "defaultSecurityRules/AllowVnetInBound",
          "priority": 65000,
          "protocol": "All",
          "sourceAddressPrefix": "VirtualNetwork",
          "sourceAddressPrefixes": [
            "VirtualNetwork"
          ],
          "sourcePortRange": "0-65535",
          "sourcePortRanges": [
            "0-65535"
          ]
        },
        {
          "access": "Allow",
          "destinationAddressPrefix": "0.0.0.0/0",
          "destinationAddressPrefixes": [
            "0.0.0.0/0",
            "::/0"
          ],
          "destinationPortRange": "0-65535",
          "destinationPortRanges": [
            "0-65535"
          ],
          "direction": "Inbound",
          "name": "defaultSecurityRules/AllowAzureLoadBalancerInBound",
          "priority": 65001,
          "protocol": "All",
          "sourceAddressPrefix": "AzureLoadBalancer",
          "sourceAddressPrefixes": [
            "AzureLoadBalancer"
          ],
          "sourcePortRange": "0-65535",
          "sourcePortRanges": [
            "0-65535"
          ]
        },
        {
          "access": "Deny",
          "destinationAddressPrefix": "0.0.0.0/0",
          "destinationAddressPrefixes": [
            "0.0.0.0/0",
            "::/0"
          ],
          "destinationPortRange": "0-65535",
          "destinationPortRanges": [
            "0-65535"
          ],
          "direction": "Inbound",
          "name": "defaultSecurityRules/DenyAllInBound",
          "priority": 65500,
          "protocol": "All",
          "sourceAddressPrefix": "0.0.0.0/0",
          "sourceAddressPrefixes": [
            "0.0.0.0/0",
            "::/0"
          ],
          "sourcePortRange": "0-65535",
          "sourcePortRanges": [
            "0-65535"
          ]
        },
        {
          "access": "Allow",
          "destinationAddressPrefix": "VirtualNetwork",
          "destinationAddressPrefixes": [
            "VirtualNetwork"
          ],
          "destinationPortRange": "0-65535",
          "destinationPortRanges": [
            "0-65535"
          ],
          "direction": "Outbound",
          "name": "defaultSecurityRules/AllowVnetOutBound",
          "priority": 65000,
          "protocol": "All",
          "sourceAddressPrefix": "VirtualNetwork",
          "sourceAddressPrefixes": [
            "VirtualNetwork"
          ],
          "sourcePortRange": "0-65535",
          "sourcePortRanges": [
            "0-65535"
          ]
        },
        {
          "access": "Allow",
          "destinationAddressPrefix": "Internet",
          "destinationAddressPrefixes": [
            "Internet"
          ],
          "destinationPortRange": "0-65535",
          "destinationPortRanges": [
            "0-65535"
          ],
          "direction": "Outbound",
          "expandedDestinationAddressPrefix": [
            "1.0.0.0/8",
            "2.0.0.0/7",
            "4.0.0.0/9",
            "4.144.0.0/12",
            "4.160.0.0/11",
            "4.192.0.0/10",
            "5.0.0.0/8",
            "6.0.0.0/7",
            "8.0.0.0/7",
            "11.0.0.0/8",
            "12.0.0.0/8",
            "13.0.0.0/10",
            "13.64.0.0/11",
            "13.104.0.0/13",
            "13.112.0.0/12",
            "13.128.0.0/9",
            "14.0.0.0/7",
            "16.0.0.0/6",
            "20.0.0.0/11",
            "20.32.0.0/15",
            "20.34.0.0/16",
            "20.35.0.0/17",
            "20.35.128.0/18",
            "20.35.192.0/19",
            "20.35.224.0/20",
            "20.35.240.0/21",
            "20.35.248.0/22",
            "20.36.0.0/14",
            "20.40.0.0/13",
            "20.48.0.0/12",
            "20.64.0.0/10",
            "20.129.0.0/16",
            "20.131.0.0/16",
            "20.132.0.0/14",
            "20.136.0.0/13",
            "20.148.0.0/14",
            "20.152.0.0/13",
            "20.160.0.0/12",
            "20.184.0.0/13",
            "20.192.0.0/10",
            "23.0.0.0/10",
            "23.64.0.0/11",
            "23.96.0.0/14",
            "23.100.0.0/15",
            "23.102.0.0/16",
            "23.103.64.0/18",
            "23.103.128.0/17",
            "23.104.0.0/13",
            "23.112.0.0/12",
            "23.128.0.0/9",
            "24.0.0.0/8",
            "25.1.0.0/16",
            "25.2.0.0/15",
            "25.8.0.0/13",
            "25.16.0.0/12",
            "25.32.0.0/11",
            "25.128.0.0/13",
            "25.136.0.0/14",
            "25.140.0.0/15",
            "25.146.0.0/15",
            "25.151.0.0/16",
            "25.157.0.0/16",
            "25.158.0.0/16",
            "25.188.0.0/14",
            "25.194.0.0/15",
            "25.196.0.0/14",
            "25.200.0.0/13",
            "25.208.0.0/12",
            "25.224.0.0/12",
            "25.240.0.0/13",
            "25.249.0.0/16",
            "25.250.80.0/22",
            "25.250.86.0/23",
            "25.250.88.0/21",
            "25.250.96.0/19",
            "25.250.128.0/17",
            "25.251.0.0/16",
            "25.253.0.0/16",
            "25.254.9.0/24",
            "25.254.10.0/23",
            "25.254.12.0/22",
            "25.254.16.0/20",
            "25.254.32.0/19",
            "25.255.0.0/16",
            "26.0.0.0/7",
            "28.0.0.0/6",
            "32.0.0.0/5",
            "40.0.0.0/10",
            "40.64.0.0/15",
            "40.66.0.0/17",
            "40.67.0.0/16",
            "40.68.0.0/14",
            "40.72.0.0/13",
            "40.80.0.0/12",
            "40.96.0.0/13",
            "40.104.0.0/14",
            "40.108.128.0/17",
            "40.110.0.0/15",
            "40.112.0.0/12",
            "40.128.0.0/9",
            "41.0.0.0/8",
            "42.0.0.0/7",
            "44.0.0.0/6",
            "48.0.0.0/6",
            "52.0.0.0/9",
            "52.128.0.0/14",
            "52.136.0.0/13",
            "52.144.0.0/16",
            "52.146.0.0/15",
            "52.148.0.0/14",
            "52.152.0.0/13",
            "52.160.0.0/11",
            "52.192.0.0/10",
            "53.0.0.0/8",
            "54.0.0.0/7",
            "56.0.0.0/5",
            "64.0.0.0/6",
            "68.0.0.0/12",
            "68.16.0.0/15",
            "68.20.0.0/14",
            "68.24.0.0/13",
            "68.32.0.0/11",
            "68.64.0.0/10",
            "68.128.0.0/9",
            "69.0.0.0/8",
            "70.0.0.0/7",
            "72.0.0.0/5",
            "80.0.0.0/4",
            "96.0.0.0/6",
            "100.0.0.0/10",
            "100.128.0.0/9",
            "101.0.0.0/8",
            "102.0.0.0/7",
            "104.0.0.0/9",
            "104.128.0.0/12",
            "104.144.0.0/15",
            "104.146.128.0/17",
            "104.148.0.0/14",
            "104.152.0.0/13",
            "104.160.0.0/11",
            "104.192.0.0/12",
            "104.208.0.0/14",
            "104.212.0.0/19",
            "104.212.32.0/22",
            "104.212.40.0/21",
            "104.212.48.0/22",
            "104.212.56.0/21",
            "104.212.64.0/18",
            "104.212.128.0/17",
            "104.213.0.0/16",
            "104.214.0.0/15",
            "104.216.0.0/13",
            "104.224.0.0/11",
            "105.0.0.0/8",
            "106.0.0.0/7",
            "108.0.0.0/6",
            "112.0.0.0/5",
            "120.0.0.0/6",
            "124.0.0.0/7",
            "126.0.0.0/8",
            "128.0.0.0/8",
            "129.0.0.0/10",
            "129.64.0.0/13",
            "129.72.0.0/15",
            "129.74.0.0/16",
            "129.76.0.0/14",
            "129.80.0.0/12",
            "129.96.0.0/11",
            "129.128.0.0/9",
            "130.0.0.0/7",
            "132.0.0.0/7",
            "134.0.0.0/9",
            "134.128.0.0/11",
            "134.160.0.0/12",
            "134.176.0.0/16",
            "134.178.0.0/15",
            "134.180.0.0/14",
            "134.184.0.0/13",
            "134.192.0.0/10",
            "135.0.0.0/8",
            "136.0.0.0/7",
            "138.0.0.0/9",
            "138.128.0.0/10",
            "138.192.0.0/14",
            "138.197.0.0/16",
            "138.198.0.0/15",
            "138.200.0.0/13",
            "138.208.0.0/12",
            "138.224.0.0/11",
            "139.0.0.0/8",
            "140.0.0.0/8",
            "141.0.0.0/9",
            "141.128.0.0/10",
            "141.192.0.0/11",
            "141.224.0.0/12",
            "141.240.0.0/13",
            "141.248.0.0/15",
            "141.250.0.0/16",
            "141.252.0.0/14",
            "142.0.0.0/7",
            "144.0.0.0/7",
            "146.0.0.0/9",
            "146.128.0.0/12",
            "146.144.0.0/15",
            "146.146.0.0/16",
            "146.148.0.0/14",
            "146.152.0.0/13",
            "146.160.0.0/11",
            "146.192.0.0/10",
            "147.0.0.0/8",
            "148.0.0.0/6",
            "152.0.0.0/6",
            "156.0.0.0/8",
            "157.0.0.0/11",
            "157.32.0.0/12",
            "157.48.0.0/13",
            "157.56.0.0/15",
            "157.58.0.0/16",
            "157.60.0.0/14",
            "157.64.0.0/10",
            "157.128.0.0/9",
            "158.0.0.0/7",
            "160.0.0.0/5",
            "168.0.0.0/8",
            "169.0.0.0/9",
            "169.128.0.0/10",
            "169.192.0.0/11",
            "169.224.0.0/12",
            "169.240.0.0/13",
            "169.248.0.0/14",
            "169.252.0.0/15",
            "169.255.0.0/16",
            "170.0.0.0/7",
            "172.0.0.0/12",
            "172.32.0.0/11",
            "172.64.0.0/10",
            "172.128.0.0/9",
            "173.0.0.0/8",
            "174.0.0.0/7",
            "176.0.0.0/4",
            "192.0.0.0/23",
            "192.0.3.0/24",
            "192.0.4.0/22",
            "192.0.8.0/21",
            "192.0.16.0/20",
            "192.0.32.0/19",
            "192.0.64.0/18",
            "192.0.128.0/17",
            "192.1.0.0/16",
            "192.2.0.0/15",
            "192.4.0.0/14",
            "192.8.0.0/13",
            "192.16.0.0/12",
            "192.33.0.0/16",
            "192.34.0.0/15",
            "192.36.0.0/14",
            "192.40.0.0/13",
            "192.48.0.0/12",
            "192.64.0.0/10",
            "192.128.0.0/11",
            "192.160.0.0/13",
            "192.169.0.0/16",
            "192.170.0.0/15",
            "192.172.0.0/14",
            "192.176.0.0/12",
            "192.192.0.0/10",
            "193.0.0.0/8",
            "194.0.0.0/7",
            "196.0.0.0/7",
            "198.0.0.0/12",
            "198.16.0.0/15",
            "198.20.0.0/14",
            "198.24.0.0/13",
            "198.32.0.0/11",
            "198.64.0.0/10",
            "198.128.0.0/9",
            "199.0.0.0/8",
            "200.0.0.0/5",
            "208.0.0.0/4"
          ],
          "name": "defaultSecurityRules/AllowInternetOutBound",
          "priority": 65001,
          "protocol": "All",
          "sourceAddressPrefix": "0.0.0.0/0",
          "sourceAddressPrefixes": [
            "0.0.0.0/0",
            "::/0"
          ],
          "sourcePortRange": "0-65535",
          "sourcePortRanges": [
            "0-65535"
          ]
        },
        {
          "access": "Deny",
          "destinationAddressPrefix": "0.0.0.0/0",
          "destinationAddressPrefixes": [
            "0.0.0.0/0",
            "::/0"
          ],
          "destinationPortRange": "0-65535",
          "destinationPortRanges": [
            "0-65535"
          ],
          "direction": "Outbound",
          "name": "defaultSecurityRules/DenyAllOutBound",
          "priority": 65500,
          "protocol": "All",
          "sourceAddressPrefix": "0.0.0.0/0",
          "sourceAddressPrefixes": [
            "0.0.0.0/0",
            "::/0"
          ],
          "sourcePortRange": "0-65535",
          "sourcePortRanges": [
            "0-65535"
          ]
        }
      ],
      "networkSecurityGroup": {
        "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-dual-hub-vnra-udr-transit/providers/Microsoft.Network/networkSecurityGroups/spoke1-vnet-vm-subnet-nsg-swedencentral",
        "resourceGroup": "rg-dual-hub-vnra-udr-transit"
      },
      "tagMap": {
        "AzureLoadBalancer": [
          "168.63.129.16/32",
          "fe80::1234:5678:9abc/128"
        ],
        "Internet": [
          "1.0.0.0/8",
          "2.0.0.0/7",
          "4.0.0.0/9",
          "4.144.0.0/12",
          "4.160.0.0/11",
          "4.192.0.0/10",
          "5.0.0.0/8",
          "6.0.0.0/7",
          "8.0.0.0/7",
          "11.0.0.0/8",
          "12.0.0.0/8",
          "13.0.0.0/10",
          "13.64.0.0/11",
          "13.104.0.0/13",
          "13.112.0.0/12",
          "13.128.0.0/9",
          "14.0.0.0/7",
          "16.0.0.0/6",
          "20.0.0.0/11",
          "20.32.0.0/15",
          "20.34.0.0/16",
          "20.35.0.0/17",
          "20.35.128.0/18",
          "20.35.192.0/19",
          "20.35.224.0/20",
          "20.35.240.0/21",
          "20.35.248.0/22",
          "20.36.0.0/14",
          "20.40.0.0/13",
          "20.48.0.0/12",
          "20.64.0.0/10",
          "20.129.0.0/16",
          "20.131.0.0/16",
          "20.132.0.0/14",
          "20.136.0.0/13",
          "20.148.0.0/14",
          "20.152.0.0/13",
          "20.160.0.0/12",
          "20.184.0.0/13",
          "20.192.0.0/10",
          "23.0.0.0/10",
          "23.64.0.0/11",
          "23.96.0.0/14",
          "23.100.0.0/15",
          "23.102.0.0/16",
          "23.103.64.0/18",
          "23.103.128.0/17",
          "23.104.0.0/13",
          "23.112.0.0/12",
          "23.128.0.0/9",
          "24.0.0.0/8",
          "25.1.0.0/16",
          "25.2.0.0/15",
          "25.8.0.0/13",
          "25.16.0.0/12",
          "25.32.0.0/11",
          "25.128.0.0/13",
          "25.136.0.0/14",
          "25.140.0.0/15",
          "25.146.0.0/15",
          "25.151.0.0/16",
          "25.157.0.0/16",
          "25.158.0.0/16",
          "25.188.0.0/14",
          "25.194.0.0/15",
          "25.196.0.0/14",
          "25.200.0.0/13",
          "25.208.0.0/12",
          "25.224.0.0/12",
          "25.240.0.0/13",
          "25.249.0.0/16",
          "25.250.80.0/22",
          "25.250.86.0/23",
          "25.250.88.0/21",
          "25.250.96.0/19",
          "25.250.128.0/17",
          "25.251.0.0/16",
          "25.253.0.0/16",
          "25.254.9.0/24",
          "25.254.10.0/23",
          "25.254.12.0/22",
          "25.254.16.0/20",
          "25.254.32.0/19",
          "25.255.0.0/16",
          "26.0.0.0/7",
          "28.0.0.0/6",
          "32.0.0.0/5",
          "40.0.0.0/10",
          "40.64.0.0/15",
          "40.66.0.0/17",
          "40.67.0.0/16",
          "40.68.0.0/14",
          "40.72.0.0/13",
          "40.80.0.0/12",
          "40.96.0.0/13",
          "40.104.0.0/14",
          "40.108.128.0/17",
          "40.110.0.0/15",
          "40.112.0.0/12",
          "40.128.0.0/9",
          "41.0.0.0/8",
          "42.0.0.0/7",
          "44.0.0.0/6",
          "48.0.0.0/6",
          "52.0.0.0/9",
          "52.128.0.0/14",
          "52.136.0.0/13",
          "52.144.0.0/16",
          "52.146.0.0/15",
          "52.148.0.0/14",
          "52.152.0.0/13",
          "52.160.0.0/11",
          "52.192.0.0/10",
          "53.0.0.0/8",
          "54.0.0.0/7",
          "56.0.0.0/5",
          "64.0.0.0/6",
          "68.0.0.0/12",
          "68.16.0.0/15",
          "68.20.0.0/14",
          "68.24.0.0/13",
          "68.32.0.0/11",
          "68.64.0.0/10",
          "68.128.0.0/9",
          "69.0.0.0/8",
          "70.0.0.0/7",
          "72.0.0.0/5",
          "80.0.0.0/4",
          "96.0.0.0/6",
          "100.0.0.0/10",
          "100.128.0.0/9",
          "101.0.0.0/8",
          "102.0.0.0/7",
          "104.0.0.0/9",
          "104.128.0.0/12",
          "104.144.0.0/15",
          "104.146.128.0/17",
          "104.148.0.0/14",
          "104.152.0.0/13",
          "104.160.0.0/11",
          "104.192.0.0/12",
          "104.208.0.0/14",
          "104.212.0.0/19",
          "104.212.32.0/22",
          "104.212.40.0/21",
          "104.212.48.0/22",
          "104.212.56.0/21",
          "104.212.64.0/18",
          "104.212.128.0/17",
          "104.213.0.0/16",
          "104.214.0.0/15",
          "104.216.0.0/13",
          "104.224.0.0/11",
          "105.0.0.0/8",
          "106.0.0.0/7",
          "108.0.0.0/6",
          "112.0.0.0/5",
          "120.0.0.0/6",
          "124.0.0.0/7",
          "126.0.0.0/8",
          "128.0.0.0/8",
          "129.0.0.0/10",
          "129.64.0.0/13",
          "129.72.0.0/15",
          "129.74.0.0/16",
          "129.76.0.0/14",
          "129.80.0.0/12",
          "129.96.0.0/11",
          "129.128.0.0/9",
          "130.0.0.0/7",
          "132.0.0.0/7",
          "134.0.0.0/9",
          "134.128.0.0/11",
          "134.160.0.0/12",
          "134.176.0.0/16",
          "134.178.0.0/15",
          "134.180.0.0/14",
          "134.184.0.0/13",
          "134.192.0.0/10",
          "135.0.0.0/8",
          "136.0.0.0/7",
          "138.0.0.0/9",
          "138.128.0.0/10",
          "138.192.0.0/14",
          "138.197.0.0/16",
          "138.198.0.0/15",
          "138.200.0.0/13",
          "138.208.0.0/12",
          "138.224.0.0/11",
          "139.0.0.0/8",
          "140.0.0.0/8",
          "141.0.0.0/9",
          "141.128.0.0/10",
          "141.192.0.0/11",
          "141.224.0.0/12",
          "141.240.0.0/13",
          "141.248.0.0/15",
          "141.250.0.0/16",
          "141.252.0.0/14",
          "142.0.0.0/7",
          "144.0.0.0/7",
          "146.0.0.0/9",
          "146.128.0.0/12",
          "146.144.0.0/15",
          "146.146.0.0/16",
          "146.148.0.0/14",
          "146.152.0.0/13",
          "146.160.0.0/11",
          "146.192.0.0/10",
          "147.0.0.0/8",
          "148.0.0.0/6",
          "152.0.0.0/6",
          "156.0.0.0/8",
          "157.0.0.0/11",
          "157.32.0.0/12",
          "157.48.0.0/13",
          "157.56.0.0/15",
          "157.58.0.0/16",
          "157.60.0.0/14",
          "157.64.0.0/10",
          "157.128.0.0/9",
          "158.0.0.0/7",
          "160.0.0.0/5",
          "168.0.0.0/8",
          "169.0.0.0/9",
          "169.128.0.0/10",
          "169.192.0.0/11",
          "169.224.0.0/12",
          "169.240.0.0/13",
          "169.248.0.0/14",
          "169.252.0.0/15",
          "169.255.0.0/16",
          "170.0.0.0/7",
          "172.0.0.0/12",
          "172.32.0.0/11",
          "172.64.0.0/10",
          "172.128.0.0/9",
          "173.0.0.0/8",
          "174.0.0.0/7",
          "176.0.0.0/4",
          "192.0.0.0/23",
          "192.0.3.0/24",
          "192.0.4.0/22",
          "192.0.8.0/21",
          "192.0.16.0/20",
          "192.0.32.0/19",
          "192.0.64.0/18",
          "192.0.128.0/17",
          "192.1.0.0/16",
          "192.2.0.0/15",
          "192.4.0.0/14",
          "192.8.0.0/13",
          "192.16.0.0/12",
          "192.33.0.0/16",
          "192.34.0.0/15",
          "192.36.0.0/14",
          "192.40.0.0/13",
          "192.48.0.0/12",
          "192.64.0.0/10",
          "192.128.0.0/11",
          "192.160.0.0/13",
          "192.169.0.0/16",
          "192.170.0.0/15",
          "192.172.0.0/14",
          "192.176.0.0/12",
          "192.192.0.0/10",
          "193.0.0.0/8",
          "194.0.0.0/7",
          "196.0.0.0/7",
          "198.0.0.0/12",
          "198.16.0.0/15",
          "198.20.0.0/14",
          "198.24.0.0/13",
          "198.32.0.0/11",
          "198.64.0.0/10",
          "198.128.0.0/9",
          "199.0.0.0/8",
          "200.0.0.0/5",
          "208.0.0.0/4"
        ],
        "VirtualNetwork": [
          "10.10.0.0/16",
          "10.20.0.0/16",
          "168.63.129.16/32"
        ]
      }
    }
  ]
}
